[package]
name = "oj-back"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
rbatis = "4.5.29"
rbdc-mysql = "4.5.8"
rbs = "4.5.18"
salvo = "0.64.0"
serde = "1.0.204"
serde_json = "1.0.122"
tokio = { version = "1", features = ["macros", "signal"] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = "0.3"
